# Atlas-Financial

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ATLAS_SHARED_LIBRARY_IMPLEMENTATION_PLAN.md  CLAUDE.md  DEVELOPMENT_STANDARDS.md  FINANCIAL_CALCULATIONS_PERFORMANCE_ASSESSMENT.md  README-MODULAR-MONOLITH.md  README-PRODUCTION-DEPLOYMENT.md  README.md  WAVE-2-PRODUCTION-DEPLOYMENT-SUMMARY.md  financial_performance_results_2025-07-29T09-50-42-876Z.json  integration-test-results.md  jest.config.js  package-lock.json  package.json  performance_test_financial_calculations.js  supertokens-integration-test-results.md  test-auth.sh  test-oidc-discovery.sh  test_financial_integration.js
.github/: pull_request_template.md
apps/desktop/: COMPREHENSIVE_SECURITY_VALIDATION_REPORT.md  Cargo.toml  Dockerfile  Dockerfile.client  SECURITY_TESTING_FRAMEWORK_SUMMARY.md  deep_crawl_system.py  deep_crawler.py  docker-compose.desktop.yml  research_config.yaml  tauri.conf.json  verify_implementation.md
apps/desktop/docs/: PREFERENCES_SYSTEM.md
apps/desktop/src/: api_client.rs  atlas_config_bridge.rs  financial.rs  lib.rs  main.rs  storage.rs  system.rs  utils.rs
apps/desktop/src/commands/: auth.rs  financial.rs  financial_refactored.rs  mod.rs  preferences.rs  security_validation.rs  system.rs
apps/desktop/src/security/: SQL_INJECTION_PREVENTION.md  TLS_IMPLEMENTATION_SUMMARY.md  comprehensive_security_tests.rs  mod.rs  rate_limiter.rs  rate_limiter_tests.rs  secure_query.rs  security_test_runner.rs  sql_injection_tests.rs  test_compile.rs  tls.rs  tls_tests.rs  vault.rs
docs/: CLAUDE_MEMORY_SYSTEM.md  INTEGRATION_TESTING_FINDINGS.md  MEMORY_UPDATE_PROTOCOL.md  ML_TRANSACTION_CATEGORIZATION_IMPLEMENTATION_COMPLETE.md  PHASE_1_5_FINANCIAL_PRECISION_COMPLETE_RESEARCH.md  PHASE_1_INTEGRATION_SUCCESS.md  PHASE_2_4_FINANCIAL_PRECISION_CONSOLIDATION_COMPLETE.md  PRD_UPDATE_SUMMARY_PHASE_1.5.md  REFACTORING_REPORT_V1.1.md  RUST_HASURA_INTEGRATION.md  SUPERTOKENS_ARCHITECTURE_DESIGN.md  SUPERTOKENS_INTEGRATION_COMPLETE.md  one shot prompt with prd.txt
mcp-sequential-thinking/: README.md  debug_mcp_connection.py  example.md  pyproject.toml
research/: ai_benchmarks_finance_research.py  ai_implementation_guide.md  (+7 more)
research/atlas-financial-cfo/src-tauri/: Cargo.toml  tauri.conf.json
research/atlas-financial-cfo/src-tauri/migrations/: 001_initial_schema.sql  002_add_indexes.sql  003_add_metadata.sql
research/atlas-financial-cfo/src-tauri/src/: error.rs  main.rs
research/atlas-financial-cfo/src-tauri/src/auth/: mod.rs  service.rs  session.rs
research/atlas-financial-cfo/src-tauri/src/commands/: accounts.rs  auth.rs  mod.rs  transactions.rs
research/atlas-financial-cfo/src-tauri/src/database/: connection.rs  migrations.rs  mod.rs
research/atlas-financial-cfo/src-tauri/src/database/repositories/: account_repository.rs  event_repository.rs  mod.rs  transaction_repository.rs  user_repository.rs
research/atlas-financial-cfo/src-tauri/src/domain/: account.rs  mod.rs  transaction.rs  user.rs  value_objects.rs
research/atlas-financial-cfo/src-tauri/src/events/: domain_event.rs  event_store.rs  handlers.rs  mod.rs
research/atlas-financial-cfo/src-tauri/src/services/: mod.rs
services/ai-engine/: Dockerfile  Dockerfile.flexible  Dockerfile.optimized  Dockerfile.v2  PHASE_2.5_REFACTORING_COMPLETE.md  README-FLEXIBLE-ARCHITECTURE.md  README-OPTIMIZED-PERFORMANCE.md  docker-compose.ai-engine-v2.yml  docker-compose.flexible.yml  docker-compose.optimized.yml  main.py  main_flexible.py  main_optimized.py  main_refactored.py  main_refactored_v2.py  pyproject.toml  requirements.txt  validate_phase_2_5.py
services/ai-engine/monitoring/prometheus/: prometheus.yml
services/ai-engine/monitoring/prometheus/alerts/: ai-engine-alerts.yml
services/ai-engine/scripts/: deploy-flexible.sh  deploy-optimized.sh  load_test.py
services/ai-engine/src/: config.py  config_updated.py  errors.py
services/ai-engine/src/api/: graphql_schema.py
services/ai-engine/src/auth/: __init__.py  jwt_validator.py
services/ai-engine/src/clients/: api_client.py
services/ai-engine/src/config/: __init__.py  atlas_config_bridge.py  flexible_config.py
services/ai-engine/src/core/: batching.py  caching.py  engine.py  optimized_engine.py
services/ai-engine/src/financial/: __init__.py  calculations.py  precision_client.py  validation.py
services/ai-engine/src/middleware/: input_validation.py
services/ai-engine/src/monitoring/: performance_monitor.py
services/ai-engine/src/privacy/: data_anonymizer.py
services/ai-engine/src/routes/: __init__.py  health.py  insights.py  models.py
services/ai-engine/src/services/: __init__.py  service_registry.py  service_registry_v2.py
services/ai-engine/tests/: test_architectural_compliance.py
services/rust-financial-engine/: Cargo.toml  Dockerfile  Makefile  README.md
services/rust-financial-engine/crates/financial-api/: Cargo.toml
services/rust-financial-engine/crates/financial-api/src/: config.rs  error.rs  lib.rs  main.rs  service.rs
services/rust-financial-engine/crates/financial-api/src/auth/: atlas.rs  claims.rs  jwt.rs  middleware.rs  mod.rs
services/rust-financial-engine/crates/financial-api/src/graphql/: mod.rs  resolvers.rs  types.rs
services/rust-financial-engine/crates/financial-api/src/graphql/schema/: debt.rs  mod.rs  mutation.rs  portfolio.rs  query.rs  subscription.rs  user.rs
services/rust-financial-engine/crates/financial-api/src/handlers/: financial.rs  graphql.rs  health.rs  mod.rs  user.rs
services/rust-financial-engine/crates/financial-api/src/monitoring/: metrics.rs  mod.rs
services/rust-financial-engine/crates/financial-core/: Cargo.toml
services/rust-financial-engine/crates/financial-core/src/: error.rs  lib.rs  types.rs
services/rust-financial-engine/crates/financial-core/src/debt/: avalanche.rs  consolidation.rs  mod.rs  optimization.rs  snowball.rs  types.rs
services/rust-financial-engine/crates/financial-core/src/portfolio/: allocation.rs  mod.rs  optimization.rs  risk.rs  types.rs
tests/: setup.ts  (+1 more)
(+385 files in other folders)
