[workspace]
members = [
    "crates/financial-core",
    "crates/financial-api"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Atlas Financial Team"]
license = "MIT"
repository = "https://github.com/atlas-financial/rust-financial-engine"

[workspace.dependencies]
# Core financial calculations
rust_decimal = { version = "1.36", features = ["serde-with-str", "db-postgres", "db-diesel-postgres"] }
rust_decimal_macros = "1.36"

# Async runtime and web framework
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
hyper = { version = "1.4", features = ["full"] }
futures = "0.3"

# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono", "uuid", "numeric"] }
diesel_migrations = "2.2"
r2d2 = "0.8"

# GraphQL
async-graphql = { version = "6.0", features = ["chrono", "uuid", "decimal"] }
async-graphql-axum = "6.0"

# Authentication and security
jsonwebtoken = "9.3"
sha2 = "0.10"
bcrypt = "0.15"

# Configuration and environment
config = "0.14"
dotenvy = "0.15"

# Logging and monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Redis caching
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
validator = { version = "0.18", features = ["derive"] }

# Testing
quickcheck = "1.0"
quickcheck_macros = "1.0"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockito = "1.5"

# Development tools
cargo-audit = "0.20"
cargo-tarpaulin = "0.31"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 1
debug = true
